# ChangeLog for dev-python/github2
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  24 Jun 2011; James Rowe <jnrowe@gmail.com> -github2-0.4.0.ebuild,
  github2-0.4.1.ebuild:
  Keyworded x86.

  24 Jun 2011; James Rowe <jnrowe@gmail.com> github2-0.4.1.ebuild:
  Keyworded amd64.

  22 Jun 2011; James Rowe <jnrowe@gmail.com> -github2-0.3.1.ebuild,
  github2-0.4.0.ebuild:
  Keyworded x86.

  22 Jun 2011; James Rowe <jnrowe@gmail.com> github2-0.4.0.ebuild:
  Keyworded amd64.

*github2-0.4.1 (24 May 2011)

  24 May 2011; James Rowe <jnrowe@gmail.com> +github2-0.4.1.ebuild:
  Version bump [378].

  23 May 2011; James Rowe <jnrowe@gmail.com> github2-0.4.0.ebuild,
  metadata.xml:
  Added proxy support deps.

  23 May 2011; James Rowe <jnrowe@gmail.com> github2-0.4.0.ebuild:
  Support building documentation.

*github2-0.4.0 (23 May 2011)

  23 May 2011; James Rowe <jnrowe@gmail.com> +github2-0.4.0.ebuild,
  +files/github2-0.4.0-test_build_path.patch:
  Version bump [377].

  18 May 2011; James Rowe <jnrowe@gmail.com> -github2-0.3.0.ebuild,
  -files/github2-0.3.0-missing_test_data.patch, github2-0.3.1.ebuild:
  Keyworded x86.

  18 May 2011; James Rowe <jnrowe@gmail.com> github2-0.3.1.ebuild:
  Keyworded amd64.

  14 May 2011; James Rowe <jnrowe@gmail.com>
  -files/github2-0.1.3-setuptools_find_packages_breakage.patch,
  -github2-0.2.0.ebuild, github2-0.3.0.ebuild:
  Keyworded x86.

  14 May 2011; James Rowe <jnrowe@gmail.com> github2-0.3.0.ebuild:
  Keyworded amd64.

*github2-0.3.1 (18 Apr 2011)

  18 Apr 2011; James Rowe <jnrowe@gmail.com> +github2-0.3.1.ebuild:
  Version bump.

*github2-0.3.0 (13 Apr 2011)

  13 Apr 2011; James Rowe <jnrowe@gmail.com> +github2-0.3.0.ebuild,
  +files/github2-0.3.0-missing_test_data.patch:
  Version bump [332].

  12 Jan 2011; James Rowe <jnrowe@gmail.com> +watch:
  Added watch file for package updates.

  01 Dec 2010; James Rowe <jnrowe@gmail.com> -github2-0.1.3.ebuild,
  github2-0.2.0.ebuild: