@@ -3,14 +3,16 @@ Hash: SHA1
 
 AUX github2-0.4.0-test_build_path.patch 466 RMD160 b67996360784a1fb528fee5fbcc103c9d33818b2 SHA1 9329e026da67524ed6092c8c8b49a65eaab388ba SHA256 47e4d089a86ada9334c792299d93cac09fa74bbe078c3fb1178ccc6bf7424a2f
 DIST github2-0.4.1.tar.gz 69874 RMD160 631db6dad2a98f1605671235613f96ae10069535 SHA1 497248544ca0da980129ac3c374c39746fc3b96e SHA256 50695e36c05bc7bf7e2c36cb68e3f93008dd9ff0f9e11de858d10a13af9ed492
+DIST github2-0.5.0.tar.gz 118719 RMD160 34e86974bcaba8089242f9932cee585a0b7b76dc SHA1 b37b74f3ce4b60df27512d4eb9ec3b9de9dd5bb6 SHA256 a42900e76061bebdeb8bd4eac94b404c8ef124ee45fddff823c21f9447e07e70
 EBUILD github2-0.4.1.ebuild 1170 RMD160 5e790d89cb8ce5d79686174cb7f4e37a35ba9519 SHA1 a47b7e961e6ef471d06a893f7c96ee97e62f870e SHA256 7e8d9cd326a224716b1f115557bfd30e70ecc1e762c6a4f4d5f24684507a5287
-MISC ChangeLog 2897 RMD160 c1587c960162827a7595bbb201bdd156dc170e9e SHA1 ef2d596824743b6d7f008bfeb41dab128c2386f0 SHA256 46670634012f51440a47023ee7c666d68190c9afaf3a4126c2e6c08a07db8e83
+EBUILD github2-0.5.0.ebuild 1271 RMD160 5d6ab4ece58332ebfc5e97e2ba265061409f6e7e SHA1 5d8e8de003dc8c477967c470748449e8dd7046cf SHA256 3550a0e8571f66a9fe1217f0da8e40d3bd1d58f612facf663b0c58a9707136bf
+MISC ChangeLog 3018 RMD160 6635704d02e68cdedad81752159f776092b09ef4 SHA1 b884412f80fab472787fabd16252f1bb1066c448 SHA256 b02a4e241d064a31828776d2164ac3b7c8a4c5a1ea98f7acfcc6bd078af0d8d9
 MISC metadata.xml 806 RMD160 ebbe88cfd22fddc7c745da87dd2e674e1bbe613b SHA1 e82f8e17d6b4e7eda31f119a14a8103f1e449268 SHA256 44fd8f8c3cd796526261547df299689040cf98c1bcf96b236bab5479f5b0005e
 MISC watch 12 RMD160 93a2adec9e10f09240c494996f1b879ab1a61113 SHA1 d61fd79473fa9466604269b1d76a71d70ed24b7a SHA256 806ffafa2258c82b35917a67c5f7faff76604958adae5efb722ca9ef82ee2874
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk4EZtoACgkQzJrj3cAXR0nHJgCffojHDpd6R2sAi1dDl4Q75MEh
-zRkAoKxq9mYiFU6JVQZ2d+WcOVnS3jXG
-=EENB
+iEYEARECAAYFAk4EarsACgkQzJrj3cAXR0mLaACfXWTpcXBYo1/QBqzfa6PNWO/5
+WPcAn1z02vTYHKKm6CW9/TkLoiMMtC2T
+=45nD
 -----END PGP SIGNATURE-----
