@@ -177,6 +177,7 @@
  * Versions:
 
   * `0.4.1 <https://github.com/JNRowe/misc-overlay/blob/master/dev-python/github2/github2-0.4.1.ebuild>`__  ``amd64``, ``x86``
+  * `0.5.0 <https://github.com/JNRowe/misc-overlay/blob/master/dev-python/github2/github2-0.5.0.ebuild>`__  ``~amd64`` (due 2011-07-24), ``~x86`` (due 2011-07-24)
 
 * ``gpxdata`` - http://www.kette-links.de/technik.php?lang=en
 
