@@ -1,0 +1,22 @@
+dev-python/setuptools doc? ( dev-python/cloud_sptheme dev-python/sphinx dev-python/sphinxcontrib-cheeseshop ) test? ( dev-python/nose dev-python/socksipy ) >=app-admin/eselect-python-20091230 =dev-lang/python-2*
+|| ( >=dev-lang/python-2.6 dev-python/simplejson ) dev-python/python-dateutil proxy? ( dev-python/socksipy ) >=app-admin/eselect-python-20091230 =dev-lang/python-2*
+0
+mirror://pypi/g/github2/github2-0.5.0.tar.gz
+
+http://pypi.python.org/pypi/github2/
+BSD
+Github API v2 library for Python
+~amd64 ~x86
+base distutils eutils jnrowe-pypi multilib portability python toolchain-funcs
+doc examples proxy test
+
+
+
+3
+
+compile configure install postinst postrm prepare test unpack
+
+
+
+
+
