@@ -25,6 +25,8 @@
 * dev-python/sure-0.5.0                      x86 SCHEDULED: <2011-07-22 Fri>
 * dev-python/cloud_sptheme-1.1             amd64 SCHEDULED: <2011-07-22 Fri>
 * dev-python/cloud_sptheme-1.1             amd64 SCHEDULED: <2011-07-24 Sun>
+* dev-python/github2-0.5.0                 amd64 SCHEDULED: <2011-07-24 Sun>
+* dev-python/github2-0.5.0                   x86 SCHEDULED: <2011-07-24 Sun>
 * dev-util/ditz-0.5-r1                       x86 SCHEDULED: <2011-08-05 Fri>
 * dev-util/ditz-0.5-r1                     amd64 SCHEDULED: <2011-08-05 Fri>
 * dev-python/rstctl-0.4                    amd64 SCHEDULED: <2011-08-08 Mon>
