@@ -2,6 +2,11 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*github2-0.5.0 (24 Jun 2011)
+
+  24 Jun 2011; James Rowe <jnrowe@gmail.com> +github2-0.5.0.ebuild:
+  Version bump [401].
+
   24 Jun 2011; James Rowe <jnrowe@gmail.com> -github2-0.4.0.ebuild,
   github2-0.4.1.ebuild:
   Keyworded x86.
